[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esheria"
version = "1.2.1"
description = "Global, citation-backed regulatory intelligence through API, CLI, Python, and MCP."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Esheria, Inc." }]
keywords = ["compliance", "legal-tech", "mcp", "regulatory-intelligence", "regtech", "python-cli"]
dependencies = [
  "anyio>=4.5,<5.0",
  "httpcore>=1.0.9,<2.0",
  "httpx>=0.28.1,<1.0",
  "mcp>=1.28.1,<2.0",
  "pydantic>=2.8,<3.0",
  "prometheus-client>=0.20,<1.0",
  "PyYAML>=6.0,<7.0",
  "starlette>=0.27,<1.0",
  "uvicorn>=0.30,<1.0",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
]

[project.urls]
Homepage = "https://esheria.ai"
Documentation = "https://docs.esheria.ai/cli"
Source = "https://github.com/esherialabs/esheria-python"
Issues = "https://github.com/esherialabs/esheria-python/issues"
Changelog = "https://docs.esheria.ai/changelog"
"MCP Server" = "https://mcp.esheria.ai/mcp"
Support = "https://esheria.ai/contact"
"Terms of Service" = "https://esheria.ai/terms"
"Privacy Policy" = "https://esheria.ai/privacy"

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]

[tool.pytest.ini_options]
norecursedirs = ["output", "packaging/public-package"]

[project.scripts]
esheria = "api.cli.esheria:main"
esheria-mcp = "api.mcp.esheria_mcp:main"

[tool.setuptools.packages.find]
include = [
  "api.cli*",
  "api.clients*",
  "api.mcp*",
]

# Lint gate (CI `lint` job runs `ruff check .`). Check-only: no `ruff format`,
# no import sorting (I) — kept to the default bug-catching rules to avoid
# style churn on a large existing codebase.
[tool.ruff]
target-version = "py313"
extend-exclude = [
  "pipeline/legacy",   # frozen superseded scripts; see pipeline/legacy/README.md
  "tmp",
  "output",
  "node_modules",
  ".venv*",
  "dashboard",         # TypeScript app
  "mintlify",          # docs site
]

[tool.ruff.lint]
# Ruff defaults: pycodestyle errors (E4/E7/E9) + pyflakes (F).
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
# Pipeline entry-point scripts must bootstrap sys.path (ROOT insert) before
# importing repo-local modules, so module-level imports after code are
# intentional there.
"pipeline/*.py" = ["E402"]
# Airflow operators register themselves with the enclosing DAG/TaskGroup
# context at construction time; assigning them to named-but-unread variables
# is the idiomatic DAG-authoring pattern.
"dags/*.py" = ["F841"]
